# app-manager

local-dev-workbench/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
local-dev-workbench/apps/vscode/: README.md
local-dev-workbench/apps/web/: index.html  package.json
local-dev-workbench/apps/web/src/: main.tsx  styles.css
local-dev-workbench/docs/: architecture.md  handoff_protocol.md  prompt_playbook.md  security_model.md  tutorial.html
local-dev-workbench/handoff/: current.md
local-dev-workbench/templates/databricks_bundle_dashboard/: README.md.j2
local-dev-workbench/templates/databricks_bundle_dashboard/dashboards/: README.md.j2
local-dev-workbench/templates/databricks_bundle_dashboard/resources/: dashboard.yml.j2
local-dev-workbench/templates/databricks_bundle_job/: README.md.j2  databricks.yml.j2  gitignore.j2
local-dev-workbench/templates/databricks_bundle_job/.github/workflows/: bundle-validate.yml.j2
local-dev-workbench/templates/databricks_bundle_job/resources/: job.yml.j2
local-dev-workbench/templates/databricks_bundle_job/src/jobs/: main.py.j2
local-dev-workbench/templates/databricks_bundle_pipeline/: README.md.j2
local-dev-workbench/templates/databricks_bundle_pipeline/resources/: pipeline.yml.j2
local-dev-workbench/templates/databricks_bundle_sql/: README.md.j2
local-dev-workbench/templates/databricks_bundle_sql/resources/: sql.yml.j2
local-dev-workbench/templates/databricks_bundle_sql/sql/: 001_create_tables.sql.j2
local-dev-workbench/templates/databricks_bundle_sql/tests/: test_placeholder.py.j2
(+1 files in other folders)
