[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-dev-workbench"
version = "0.1.0"
description = "Local-first developer workbench for Databricks, assistant apps, prompts, and handoffs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
]

[project.scripts]
workbench = "dev_workbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/dev_workbench"]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests"]
pythonpath = ["packages/core/src"]
